# inventario-etl-cd4ml

./: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.test.yml  docker-compose.yml  makefile  pyproject.toml  requirements.txt
data/: fotografia_inventario_diario.csv  ventas_diarias.csv
notebook/: demand.ipynb
src/: extract.py  load.py  pipeline.py  transform.py
src/core/: config.py  db.py
src/dashboard/: app.py
src/utils/: generar_datos.py
tests/: conftest.py
tests/integration/: test_load.py
tests/unit/: test_transform.py
