[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

filterwarnings = ["ignore::DeprecationWarning",]

env = [
    "ENVIRONMENT=testing",
    "DATABASE_URL=sqlite:///./test_database_en_memoria.db"
]